rough activity impl on frontend
